# cad2shape

./: WORKSPACE.bazel
src/: BUILD.bazel  cad2shape.cpp  data_class.cpp  data_class.h  helper.cpp  shapefileImoti.cpp  shapefileNadpisi.cpp  shapefileOgrpimo.cpp  shapefilePrava.cpp  shapefileSgradi.cpp  shapefileShemi.cpp
